--- a/next-app/src/app/globals.css
+++ b/next-app/src/app/globals.css
@@ -23,5 +23,10 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+}
+
+html,
+body {
+  font-family: "Times New Roman", Times, serif;
 }
